# cloud_sync

./: Cargo.toml  README.md  config.toml
config/: config.toml
nginx/: README.md
scripts/: deploy.sh
src/: aws_manager.rs  chunk.rs  cloud_sync.rs  config.rs  errors.rs  initialization.rs  logging.rs  mail_manager.rs  mail_model.rs  main.rs  onedrive_manager.rs  onedrive_model.rs  token_manager.rs
systemd/: README.md  cloudsync.service  start.sh
