[package]
name = "cloud_sync"
version = "0.4.0"
edition = "2021"

[dependencies]
actix-web = "4"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.12", features = ["chrono_0_4"] }
chrono = "0.4"
toml = "0.8"
log4rs = "1.3"
log = "0.4"
aws-config = "1.6"
aws-sdk-s3 = "1.84"
aws-smithy-runtime-api = "1.8"
tokio = { version = "1.45", features = ["full"] }
anyhow = "1.0.98"
derivative = "2.2"
