[package]
name = "cloud_sync"
version = "0.5.1"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["rustls-0_23"] }
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.14", features = ["chrono_0_4"] }
chrono = "0.4"
toml = "0.9"
log4rs = "1.3"
log = "0.4"
aws-config = "1.8"
aws-sdk-s3 = "1.100"
aws-smithy-runtime-api = "1.8"
tokio = { version = "1.46", features = ["full"] }
anyhow = "1.0"
derivative = "2.2"
rustls = "0.23"
rustls-pki-types = "1.12"
