[package]
name = "cloud_sync"
version = "0.6.0"
edition = "2021"

[dependencies]
axum = "0.8"
axum-server = "0.8"
reqwest = { version = "0.13", features = ["form"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = {  version = "0.4", features = ["serde"] }
toml = "0.9"
log4rs = "1.4"
log = "0.4"
aws-config = "1.8"
aws-sdk-s3 = "1.119"
aws-smithy-runtime-api = "1.9"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "time"] }
anyhow = "1.0"
derivative = "2.2"
lettre = { version = "0.11", features = ["smtp-transport", "tokio1-native-tls"]}
